--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  
 }
 
 .App-logo {
@@ -19,4 +19,42 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.list-group{
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding-left:0;
+  margin-bottom: 0;
+}
+
+.list-group-item {
+  position:relative;
+  display: block;
+  padding: 0.75rem 1.25 rem;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: 1px solid rgba(0,0,0,0.125);
+}
+.list-group-flush .list-group-item{
+  border-right:0;
+  border-left: 0;
+  border-radius:0;
+}
+.list-group-flush:first-child .list-group-item:first-child{
+  border-top:0;
+}
+
+.flex-container{
+  align-items: center;
+  display:flex;
+}
+
+.thumbnail{
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  margin-right: 20px;
 }
